force-app/main/default/objects/CustomerDashboard__c/CustomerDashboard__c.object-meta.xml
<CustomObject>
    <label>Customer Dashboard</label>
    <nameField>
        <displayFormat>CD#{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Dashboard</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>