force-app/main/default/objects/CustomerDashboard__c/fields/ABSLInboundL12M__c.field-meta.xml
<CustomField>
    <fullName>ABSLInboundL12M__c</fullName>
    <label>ABSL Inbound L12M</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>