force-app/main/default/objects/CustomerDashboard__c/fields/ABSLInboundL3M__c.field-meta.xml
<CustomField>
    <fullName>ABSLInboundL3M__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ABSL Inbound L3M</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>