force-app/main/default/objects/CustomerDashboard__c/fields/ABSLInboundLM__c.field-meta.xml
<CustomField>
    <fullName>ABSLInboundLM__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ABSL Inbound LM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>