force-app/main/default/objects/CustomerDashboard__c/fields/ABSLInboundLMTD__c.field-meta.xml
<CustomField>
    <fullName>ABSLInboundLMTD__c</fullName>
    <label>ABSL Inbound LMTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>