force-app/main/default/objects/CustomerDashboard__c/fields/ABSLInboundYTD__c.field-meta.xml
<CustomField>
    <fullName>ABSLInboundYTD__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ABSL Inbound YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>