force-app/main/default/objects/CustomerDashboard__c/fields/ABSLOutboundLM__c.field-meta.xml
<CustomField>
    <fullName>ABSLOutboundLM__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ABSL Outbound LM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>