force-app/main/default/objects/CustomerDashboard__c/fields/ABSLOutboundLMTD__c.field-meta.xml
<CustomField>
    <fullName>ABSLOutboundLMTD__c</fullName>
    <label>ABSL Outbound LMTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>