force-app/main/default/objects/CustomerDashboard__c/fields/ABSLOutboundMTD__c.field-meta.xml
<CustomField>
    <fullName>ABSLOutboundMTD__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ABSL Outbound MTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>