force-app/main/default/objects/CustomerDashboard__c/fields/ABSLOutboundYTD__c.field-meta.xml
<CustomField>
    <fullName>ABSLOutboundYTD__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ABSL Outbound YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>