force-app/main/default/objects/CustomerDashboard__c/fields/CasesClosedLMTD__c.field-meta.xml
<CustomField>
    <fullName>CasesClosedLMTD__c</fullName>
    <label># Cases Closed LMTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>