force-app/main/default/objects/CustomerDashboard__c/fields/CasesClosedMTD__c.field-meta.xml
<CustomField>
    <fullName>CasesClosedMTD__c</fullName>
    <defaultValue>0</defaultValue>
    <label># Cases Closed MTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>