force-app/main/default/objects/CustomerDashboard__c/fields/CasesOpenL12M__c.field-meta.xml
<CustomField>
    <fullName>CasesOpenL12M__c</fullName>
    <label># Cases Open L12M</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>