force-app/main/default/objects/CustomerDashboard__c/fields/CasesOpenL3M__c.field-meta.xml
<CustomField>
    <fullName>CasesOpenL3M__c</fullName>
    <defaultValue>0</defaultValue>
    <label># Cases Open L3M</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>