force-app/main/default/objects/CustomerDashboard__c/fields/CasesOpenLM__c.field-meta.xml
<CustomField>
    <fullName>CasesOpenLM__c</fullName>
    <defaultValue>0</defaultValue>
    <label># Cases Open LM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>