force-app/main/default/objects/CustomerDashboard__c/fields/CasesOpenLMTD__c.field-meta.xml
<CustomField>
    <fullName>CasesOpenLMTD__c</fullName>
    <label># Cases Open LMTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>