force-app/main/default/objects/CustomerDashboard__c/fields/CollectionL12M__c.field-meta.xml
<CustomField>
    <fullName>CollectionL12M__c</fullName>
    <label>Collection L12M</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>