force-app/main/default/objects/CustomerDashboard__c/fields/CollectionLM__c.field-meta.xml
<CustomField>
    <fullName>CollectionLM__c</fullName>
    <label>Collection LM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>