force-app/main/default/objects/CustomerDashboard__c/fields/CollectionMTD__c.field-meta.xml
<CustomField>
    <fullName>CollectionMTD__c</fullName>
    <label>Collection MTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>