force-app/main/default/objects/CustomerDashboard__c/fields/CollectionYTD__c.field-meta.xml
<CustomField>
    <fullName>CollectionYTD__c</fullName>
    <label>Collection YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>