force-app/main/default/objects/CustomerDashboard__c/fields/DIFOTL3M__c.field-meta.xml
<CustomField>
    <fullName>DIFOTL3M__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DIFOT L3M</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>