force-app/main/default/objects/CustomerDashboard__c/fields/DIFOTLMTD__c.field-meta.xml
<CustomField>
    <fullName>DIFOTLMTD__c</fullName>
    <label>DIFOT LMTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>