force-app/main/default/objects/CustomerDashboard__c/fields/DIFOTMTD__c.field-meta.xml
<CustomField>
    <fullName>DIFOTMTD__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DIFOT MTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>