force-app/main/default/objects/CustomerDashboard__c/fields/DIFOTYTD__c.field-meta.xml
<CustomField>
    <fullName>DIFOTYTD__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DIFOT YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>