force-app/main/default/objects/CustomerDashboard__c/fields/DocketL12M__c.field-meta.xml
<CustomField>
    <fullName>DocketL12M__c</fullName>
    <label>Docket L12M</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>