force-app/main/default/objects/CustomerDashboard__c/fields/DocketLMTD__c.field-meta.xml
<CustomField>
    <fullName>DocketLMTD__c</fullName>
    <label>Docket LMTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>