force-app/main/default/objects/CustomerDashboard__c/fields/DocketMTD__c.field-meta.xml
<CustomField>
    <fullName>DocketMTD__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Docket MTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>