force-app/main/default/objects/CustomerDashboard__c/fields/LastTradeAmount__c.field-meta.xml
<CustomField>
    <fullName>LastTradeAmount__c</fullName>
    <label>Last Trade Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>