force-app/main/default/objects/CustomerDashboard__c/fields/LastTradeDate__c.field-meta.xml
<CustomField>
    <fullName>LastTradeDate__c</fullName>
    <label>Last Trade Date</label>
    <type>Date</type>
</CustomField>