force-app/main/default/objects/CustomerDashboard__c/fields/MoM__c.field-meta.xml
<CustomField>
    <fullName>MoM__c</fullName>
    <formula>IF( Revenue_LMTD__c =0,0,( RevenueMTD__c - Revenue_LMTD__c  ) / Revenue_LMTD__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MoM%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>