force-app/main/default/objects/CustomerDashboard__c/fields/OpenAsOnDate__c.field-meta.xml
<CustomField>
    <fullName>OpenAsOnDate__c</fullName>
    <defaultValue>0</defaultValue>
    <label># Open As On Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>