force-app/main/default/objects/CustomerDashboard__c/fields/OutstandingL12M__c.field-meta.xml
<CustomField>
    <fullName>OutstandingL12M__c</fullName>
    <label>Outstanding L12M</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>