force-app/main/default/objects/CustomerDashboard__c/fields/OutstandingLMTD__c.field-meta.xml
<CustomField>
    <fullName>OutstandingLMTD__c</fullName>
    <label>Outstanding LMTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>