force-app/main/default/objects/CustomerDashboard__c/fields/OutstandingMTD__c.field-meta.xml
<CustomField>
    <fullName>OutstandingMTD__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Outstanding MTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>