force-app/main/default/objects/CustomerDashboard__c/fields/OutstandingYTD__c.field-meta.xml
<CustomField>
    <fullName>OutstandingYTD__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Outstanding YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>