force-app/main/default/objects/CustomerDashboard__c/fields/Revenue_LMTD__c.field-meta.xml
<CustomField>
    <fullName>Revenue_LMTD__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Revenue LMTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>