force-app/main/default/objects/CustomerDashboard__c/fields/RevenueL12M__c.field-meta.xml
<CustomField>
    <fullName>RevenueL12M__c</fullName>
    <label>Revenue L12M</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>