force-app/main/default/objects/CustomerDashboard__c/fields/RevenueL3M__c.field-meta.xml
<CustomField>
    <fullName>RevenueL3M__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Revenue L3M</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>