force-app/main/default/objects/CustomerDashboard__c/fields/RevenueLM__c.field-meta.xml
<CustomField>
    <fullName>RevenueLM__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Revenue LM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>