force-app/main/default/objects/CustomerDashboard__c/fields/RevenueYTD__c.field-meta.xml
<CustomField>
    <fullName>RevenueYTD__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Revenue YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>