force-app/main/default/objects/CustomerDashboard__c/fields/Up_Down__c.field-meta.xml
<CustomField>
    <fullName>Up_Down__c</fullName>
    <formula>RevenueMTD__c -  Revenue_LMTD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Up Down</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>