force-app/main/default/objects/CustomerDashboard__c/fields/VisitsL3M__c.field-meta.xml
<CustomField>
    <fullName>VisitsL3M__c</fullName>
    <defaultValue>0</defaultValue>
    <label># Visits L3M</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>