force-app/main/default/objects/CustomerDashboard__c/fields/VisitsLMTD__c.field-meta.xml
<CustomField>
    <fullName>VisitsLMTD__c</fullName>
    <label># Visits LMTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>