force-app/main/default/objects/CustomerDashboard__c/fields/VisitsYTD__c.field-meta.xml
<CustomField>
    <fullName>VisitsYTD__c</fullName>
    <defaultValue>0</defaultValue>
    <label># Visits YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>