force-app/main/default/objects/CustomerDashboard__c/fields/VolumeL3M__c.field-meta.xml
<CustomField>
    <fullName>VolumeL3M__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Volume L3M</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>