force-app/main/default/objects/CustomerDashboard__c/fields/VolumeLM__c.field-meta.xml
<CustomField>
    <fullName>VolumeLM__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Volume LM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>