force-app/main/default/objects/CustomerDashboard__c/fields/VolumeLMTD__c.field-meta.xml
<CustomField>
    <fullName>VolumeLMTD__c</fullName>
    <label>Volume LMTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>