force-app/main/default/objects/CustomerDashboard__c/fields/VolumeYTD__c.field-meta.xml
<CustomField>
    <fullName>VolumeYTD__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Volume YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>