force-app/main/default/objects/CustomerDashboard__c/fields/X030Revenue__c.field-meta.xml
<CustomField>
    <fullName>X030Revenue__c</fullName>
    <label>0-30 Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>