force-app/main/default/objects/CustomerDashboard__c/fields/X181365Revenue__c.field-meta.xml
<CustomField>
    <fullName>X181365Revenue__c</fullName>
    <label>181- 365 Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>