force-app/main/default/objects/CustomerDashboard__c/fields/X3190Revenue__c.field-meta.xml
<CustomField>
    <fullName>X3190Revenue__c</fullName>
    <label>31-90 Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>