force-app/main/default/objects/CustomerDashboard__c/fields/Yield_LMTD__c.field-meta.xml
<CustomField>
    <fullName>Yield_LMTD__c</fullName>
    <formula>IF(
VolumeLMTD__c&gt;0,
Revenue_LMTD__c / VolumeLMTD__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yield LMTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>