force-app/main/default/objects/CustomerDashboard__c/fields/YieldL12M__c.field-meta.xml
<CustomField>
    <fullName>YieldL12M__c</fullName>
    <formula>IF(
    VolumeL12M__c&gt;0,
    RevenueL12M__c / VolumeL12M__c,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yield L12M</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>