force-app/main/default/objects/CustomerDashboard__c/fields/YieldL3M__c.field-meta.xml
<CustomField>
    <fullName>YieldL3M__c</fullName>
    <formula>IF(
    VolumeL3M__c&gt;0,
    RevenueL3M__c / VolumeL3M__c,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yield L3M</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>