force-app/main/default/objects/CustomerDashboard__c/fields/YieldLM__c.field-meta.xml
<CustomField>
    <fullName>YieldLM__c</fullName>
    <formula>IF(
    VolumeLM__c&gt;0,
    RevenueLM__c / VolumeLM__c,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yield LM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>