force-app/main/default/objects/CustomerDashboard__c/fields/YieldMTD__c.field-meta.xml
<CustomField>
    <fullName>YieldMTD__c</fullName>
    <formula>IF(
    VolumeMTD__c&gt;0,
 RevenueMTD__c / VolumeMTD__c,
 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yield MTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>