force-app/main/default/objects/CustomerDashboard__c/fields/YieldYTD__c.field-meta.xml
<CustomField>
    <fullName>YieldYTD__c</fullName>
    <formula>IF(
    VolumeYTD__c&gt;0,
    RevenueYTD__c / VolumeYTD__c,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yield YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>