force-app/main/default/objects/CustomerDashboard__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BLRZ</fullName>
            </value>
            <value>
                <fullName>BOMZ</fullName>
            </value>
            <value>
                <fullName>CCUZ</fullName>
            </value>
            <value>
                <fullName>DELZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>